# EZVisual

./: CMakeLists.txt  README.md
demo/: EZVisualTest.cpp  EZVisual_Demo.json
include/: CMakeLists.txt
include/EZVisual/: AutoWrapStack.h  Border.h  Brushes.h  Canvas.h  Controls.h  Core.h  Drawables.h  EZVisual.h  Interfaces.h  PlainText.h  StackView.h  Tools.h  Visualization.h
include/EZVisual/Brushes/: Brush.h  Color.hpp  LinearGradientBrush.h  SolidColorBrush.h
include/EZVisual/Controls/: AutoWrapStack.h  Border.h  Button.h  Canvas.h  PlainText.h  StackView.h
include/EZVisual/Drawables/: Color.hpp  Drawable.h
include/EZVisual/Interfaces/: Backgroundable.h  Backgroundable.hpp  Childrenable.h  Childrenable.hpp  Contentable.h  Contentable.hpp  Interfaces.h  Marginable.h  Marginable.hpp  MinHeightable.h  MinWidthable.h  Orientationable.h  Orientationable.hpp  Paddingable.h  Paddingable.hpp  Textable.h  Textable.hpp  VisualElement.h
include/EZVisual/Tools/: SharedMutex.hpp  StringConverter.hpp  Timer.hpp
src/: AutoWrapStack.cpp  Border.cpp  CMakeLists.txt  Canvas.cpp  Core.cpp  PlainText.cpp  StackView.cpp  VisualElement.cpp  Visualization.cpp
src/Brushes/: Brush.cpp  LinearGradientBrush.cpp  SolidColorBrush.cpp
src/Controls/: Border.cpp  Button.cpp  Canvas.cpp  PlainText.cpp  StackView.cpp
test/: CMakeLists.txt  EZVisualTest.cpp  test_visual_config.json
